# git-ai-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .py  .pypirc  README.md  pull_request_template.md  requirements-dev.txt  setup.cfg
.github/workflows/: python-publish.yml
ai_commit_msg/: cli.py  config_service.py  local_db_service.py  logger.py  main.py  openai_service.py  prepare_commit_msg_hook.py  setup.py
ai_commit_msg/cli/: config_handler.py  gen_ai_commit_message_handler.py  help_ai_handler.py  hook_handler.py  summary_handler.py
ai_commit_msg/cli_handler/: config_handler.py
ai_commit_msg/core/: gen_commit_msg.py  llm_chat_completion.py  prompt.py
ai_commit_msg/services/: anthropic_service.py  config_service.py  git_service.py  husky_service.py  local_db_service.py  model_error_handling.py  ollama_service.py  onboarding_service.py  openai_service.py  pip_service.py
ai_commit_msg/utils/: diff_truncator.py  error.py  error_handling.py  get_ai_model_errors.py  logger.py  model_error_handling.py  models.py  utils.py
docs/: local_development.md
prepare_commit_msg_hooks/: cli.py  config_service.py  gen_ai_commit_message.py  local_db_service.py  logger.py  main.py  openai_service.py  utils.py
wiki/: anthropic.md  local_development.md  ollama.md  uploading_to_pypi.md
