[metadata]
name = git_ai_commit
version = 1.0.0
description = A project to generate commit messages using AI
author = Ming Lin
author_email = minglianglin50@gmail.com
license = MIT
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/ming1in/ai-commit-message
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openai==1.37.1
    requests==13.7.1
    anthropic==0.33.0
    rich==13.7.1
    pyfiglet==1.0.2
    prompt_toolkit==3.0.47
    inquirer==3.3.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    git_ai_commit = ai_commit_msg.main:main
    gac = ai_commit_msg.main:main

[bdist_wheel]
universal = True
