[metadata]
name = git_ai_commit
version = 1.0.4
description = A project to generate commit messages using AI
author = Ming Lin, Seif Mamdouh, Ali Alobaidi
author_email = minglianglin50@gmail.com, seifmamdouh7878@gmail.com, alinawar2000@gmail.com
license = MIT
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/the-cafe/ai-commit-msg
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    openai
    requests
    anthropic
    rich
    pyfiglet
    prompt_toolkit
    inquirer
python_requires = >=3.6

[options.entry_points]
console_scripts =
    git-ai-commit = ai_commit_msg.main:main
    gac = ai_commit_msg.main:main

[bdist_wheel]
universal = True
